--- a/gateway-service-dev.yml
+++ b/gateway-service-dev.yml
@@ -2,6 +2,10 @@ server:
   port: 8080
   
 spring:
+  eureka:
+    client:
+      service-url:
+        defaultZone: http://localhost:8761/eureka
   cloud:
     gateway:
       routes:
@@ -12,8 +16,4 @@ spring:
         - id: catalogRoute #Identificando la ruta del service de producto
           uri: http://localhost:8084/ #URL donde se hará el redirect segun el predicate definido
           predicates: #RReglas de análisis de una request
-            - Path=/catalogs/**
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka
+            - Path=/catalog/**
