--- a/gateway-service-dev.yml
+++ b/gateway-service-dev.yml
@@ -10,10 +10,13 @@ spring:
     gateway:
       routes:
         - id: movieRoute #Identificando la ruta del service de producto
-          uri: http://localhost:8082/ #URL donde se hará el redirect segun el predicate definido
+          uri: lb://movie-service #URL donde se hará el redirect segun el predicate definido
           predicates: #RReglas de análisis de una request
             - Path=/movies/**
         - id: catalogRoute #Identificando la ruta del service de producto
-          uri: http://localhost:8084/ #URL donde se hará el redirect segun el predicate definido
+          uri: lb://catalog-service #URL donde se hará el redirect segun el predicate definido
           predicates: #RReglas de análisis de una request
             - Path=/catalog/**
+            
+            #http://localhost:8082/
+            #http://localhost:8084/
